Update apache example site config. for localhost.

--- a/apache-site-config-example.conf
+++ b/apache-site-config-example.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
-  ServerName http://domain.com
-  ServerAlias serveralias
+  ServerName http://127.0.0.1
+  ServerAlias localhost
   ServerAdmin admin@domain.com
 
   Include /etc/webvalidation/apache-include.conf
@@ -8,11 +8,11 @@
 </VirtualHost>
 
 <VirtualHost *:443>
-  ServerName https://domain.com
-  ServerAlias serveralias
+  ServerName https://127.0.0.1
+  ServerAlias localhost
   ServerAdmin admin@domain.com
 
-  Use SSL
+  #Use SSL
   Include /etc/webvalidation/apache-include.conf
 
 </VirtualHost>
