Apache config. update.

--- a/apache-include.conf
+++ b/apache-include.conf
@@ -10,8 +10,7 @@ Alias /webapps/webvalidation/media /usr/share/webvalidation/htdocs
   AllowOverride None
 
   # ACL
-  Order deny,allow
-  Allow from all
+  Require all granted
 </Directory>
 
 Alias /webapps/webvalidation/cgi /usr/share/webvalidation/scripts/cgi
@@ -21,8 +20,7 @@ Alias /webapps/webvalidation/cgi /usr/share/webvalidation/scripts/cgi
   AddHandler cgi-script .pm .pl
 
   # ACL
-  Order deny,allow
-  Allow from all
+  Require all granted
 </Directory>
 
 Alias /webapps/webvalidation/data /var/lib/webvalidation/data
@@ -32,6 +30,5 @@ Alias /webapps/webvalidation/data /var/lib/webvalidation/data
   AllowOverride None
 
   # ACL
-  Order deny,allow
-  Allow from all
+  Require all granted 
 </Directory>
